# force

./: CMakeLists.txt  LICENSE.txt  README.md  basic_matrix.hpp  basic_vector.hpp  complex.hpp  force_core.hpp  format.hpp  matrices.hpp  matrix.hpp  prmthfn.hpp  simd.hpp  vector.hpp  vector_view.hpp
f32/: basic_math.cpp  basic_math.h  constants.h  constants.hpp  ext_output.hpp  mat2x2.cpp  mat2x2.h  prmthfn.hpp  vec2.cpp  vec2.h  vec3.cpp  vec3.h
fmath/: basic_vector.hpp  constants.hpp  noise.hpp  predef.hpp  vector.hpp  vector_pipe.hpp  vector_view.hpp
include/: Format.hpp  utility.hpp  vector.hpp
include/fmath/: BasicMatrix.hpp  BasicVector.hpp  Complex.hpp  Constant.hpp  FnOperate.hpp  Matrices.hpp  Matrix.hpp  Noise.hpp  PrMathFn.hpp  SIMD.hpp  SIMDVector4.hpp  Vector.hpp  VectorPipe.hpp  basic_matrix.hpp  basic_pipe.hpp  basic_vector.hpp  complex.hpp  constant.hpp  fnoperation.hpp  math_format.hpp  matrices.hpp  matrix.hpp  noise.hpp  pipe.hpp  primary.hpp  simd_decl.hpp  simd_vector4.hpp  vector.hpp
module/: utility.cppm  vector.cppm
predef/: arm.h  ppc.h  x86.h  x86_amd.h
predef/arm/: versions.h
predef/ppc/: versions.h
predef/x86/: versions.h
predef/x86_amd/: versions.h
simd/: intel_sse.hpp  intel_sse2.hpp  sse.hpp
src/fmath/: Matrices.cpp  PrMathFn.cpp  SIMDVector4.cpp  matrices.cpp  primary.cpp  simd_vector4.cpp
test/: FMathTest.cpp  math_test.cpp
